# SlowChess

./: .gitignore  LICENSE  README.md  SlowChess.cabal
bench/: bench.hs
cli/: Main.hs
prof/: Main.hs
src/Game/SlowChess/: AI.hs  Board.hs  Coord.hs  Evaluate.hs  Game.hs  Mask.hs  Move.hs  Movement.hs  Piece.hs  Pretty.hs  REPL.hs  Score.hs
src/Game/SlowChess/AI/: Internal.hs  MinMax.hs  Negamax.hs  Negascout.hs
src/Game/SlowChess/Game/: Fifty.hs  Internal.hs  ThreeFold.hs
src/Game/SlowChess/Move/: Castle.hs  EnPassant.hs  Internal.hs  Promotion.hs
tests/: BoardTests.hs  CoordTests.hs  FIDE.hs  FIDETests.hs  GameInternalTests.hs  Instances.hs  MaskTests.hs  MoveInternalTests.hs  MoveTests.hs  MovementTests.hs  PieceTests.hs  tests.hs
