name: SlowChess
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: isaac@azuelos.ca
stability: nope
synopsis: A chess engine.
description:
    A chess engine in Haskell.
category: Game
author: Isaac Azuelos
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/isaacazuelos/SlowChess.git

library
    build-depends:
        base >= 4 && < 5
    exposed-modules:
        Game.SlowChess.Board
        Game.SlowChess.Coord
        Game.SlowChess.Mask
        Game.SlowChess.Move
        Game.SlowChess.Move.Internal
        Game.SlowChess.Piece
        Game.SlowChess.Pretty
        Game.SlowChess.Game
        Game.SlowChess.Game.Internal
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src/
    ghc-options: -Wall

executable slowchess
    build-depends:
        SlowChess,
        base >= 4 && < 5
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: cli
    ghc-options: -Wall

-- test-suite tests
--     build-depends:
--         slowchess -any,
--         tasty,
--         containers,
--         tasty-hunit,
--         base
--     type: exitcode-stdio-1.0
--     main-is: tests.hs
--     buildable: True
--     default-language: Haskell2010
--     hs-source-dirs: tests
--     ghc-options: -Wall
