name: SlowChess
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: isaac@azuelos.ca
stability: nope
synopsis: A chess engine.
description:
    A chess engine in Haskell.
category: Game
author: Isaac Azuelos
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/isaacazuelos/SlowChess.git

library
    build-depends:
        base >=4 && <5,
        containers,
        mtl
    exposed-modules:
        Game.SlowChess.AI
        Game.SlowChess.AI.Minmax
        Game.SlowChess.AI.Internal
        Game.SlowChess.Board
        Game.SlowChess.Coord
        Game.SlowChess.Game
        Game.SlowChess.Game.Fifty
        Game.SlowChess.Game.Internal
        Game.SlowChess.Game.ThreeFold
        Game.SlowChess.Mask
        Game.SlowChess.Move
        Game.SlowChess.Move.Castle
        Game.SlowChess.Move.EnPassant
        Game.SlowChess.Move.Internal
        Game.SlowChess.Move.Promotion
        Game.SlowChess.Piece
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src/
    ghc-options: -Wall

executable slowchess
    build-depends:
        SlowChess -any,
        base >=4 && <5
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: cli
    ghc-options: -Wall

test-suite tests
    main-is:             tests.hs
    hs-source-dirs:      tests
    default-language:    Haskell2010
    type:                exitcode-stdio-1.0
    ghc-options:         -Wall -fno-warn-missing-signatures
    build-depends:
        SlowChess,
        base  >= 4 && < 5,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        QuickCheck
